Traefik/IngressRoutes/whoami-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik-whoami.jonas-bossaerts.com`) 
      kind: Rule
      services:
        - name: whoami
          port: 80
